
ModificationSet
----------------------
* Fixed bogus "A modification was detected in the future" message
* Now properly checks time of modficiations that are added as elements

PluginXMLHelper
----------------------
* add support for nested elements via add(<Type>)

Project
----------------------
* Now fires BuildProgressEvents and BuildResultEvents. Patch by Michael Beauregard

PVCS
----------------------
* Added loginId attribute. Patch by David Cole
* Added back up date format to try in case output date includes seconds. Patch by David Cole
* Added additional parsing when project files includes project path. Patch by David Cole

SVN
----------------------
* Revert to using date instead of guessing at revision. Patch by Etienne Studer
* Add to plugin registry. Patch by Gerd Zanker
* Add initial documentation in configxml.html and plugins.html. Patch by Gerd Zanker

testdetails.xsl
----------------------
* Support testsuite elements that have been nested, such as in the output from junitreport. Patch by Joris Kuipers

VssBootstrapper
----------------------
* Fixed a bug where bootstrapper would hang if SS.exe put up a prompt.

CruiseControl Release Notes - 2.1.5

ArtifactsPublisher
----------------------
* Add attribute 'subdirectory'. Patch by Garrick Olson
* Change copying of individual files to no longer use the path to the file before copying as part of the path after copying. Patch by Garrick Olson

BuildLogger
----------------------
* New interface to handle the Log subelements from the CruiseControl config. Implementers have the opportunity to manipulate the CruiseControl build log just before it gets written to disk.

BuildStatus
----------------------
* New SourceControl implementation. Used to trigger a build when another CruiseControl project has a successfuil build. Works by monitoring the log directory for the "target" project. - Patch by Garrick Olson

build.xml (jsp)
----------------------